--- a/src/main/resources/templates/new-password.html
+++ b/src/main/resources/templates/new-password.html
@@ -45,6 +45,9 @@
             font-size: 24px;
             font-weight: bold;
         }
+        .new-password-container {
+            text-align: center;
+        }
     </style>
 </head>
 <body>
@@ -60,8 +63,9 @@
         <p class="greeting">Dear ${emailDetails.username},</p>
 
         <p>Your password has been successfully reset. Below is your new password:</p>
-
-        <p class="new-password"><strong>${emailDetails.password}</strong></p>
+        <div class="new-password-container">
+            <p class="new-password"><strong>${emailDetails.password}</strong></p>
+        </div>
 
         <p>We recommend that you change this password to something more memorable once you log in. You can update your password in the app under the account settings section.</p>
         <p>If you did not request a password reset or if you encounter any issues, please contact our support team immediately.</p>
