--- a/src/main/resources/templates/new-password.html
+++ b/src/main/resources/templates/new-password.html
@@ -48,6 +48,16 @@
         .new-password-container {
             text-align: center;
         }
+
+        @media only screen and (max-width: 600px) {
+            .header h1 {
+                font-size: 28px;
+            }
+
+            .header img {
+                max-width: 60px;
+            }
+        }
     </style>
 </head>
 <body>
