--- a/src/main/resources/templates/password-recovery.html
+++ b/src/main/resources/templates/password-recovery.html
@@ -55,6 +55,16 @@
         .button-container {
             text-align: center;
         }
+
+        @media only screen and (max-width: 600px) {
+            .header h1 {
+                font-size: 28px;
+            }
+
+            .header img {
+                max-width: 60px;
+            }
+        }
     </style>
 </head>
 <body>
