GEM-164 | fixed button text color

--- a/src/main/resources/templates/password-recovery.html
+++ b/src/main/resources/templates/password-recovery.html
@@ -46,7 +46,7 @@
             width: 95%;
             padding: 10px 0;
             font-size: 16px;
-            color: #fff;
+            color: #fff !important;
             background-color: #1EA7FF;
             text-decoration: none;
             border-radius: 30px;
